--- a/templates/news.html
+++ b/templates/news.html
@@ -1,28 +1,30 @@
 {% extends "base.html"%} {% block title%}News{% endblock%} {% block content %}
 <div class="container-fluid mt-3">
 	<div class="jumbotron mx-4">
-		<h1 class="display-4">Hellew, www!</h1>
+		<h1 class="display-4">Stock, www!</h1>
 		<p class="lead">
 			This is a simple hero unit, a simple jumbotron-style component for calling
 			extra attention to featured content or information.
 		</p>
 		<hr class="my-4" />
+		<!-- start sw-rss-feed code -->
 		<script type="text/javascript">
+			<!--
 			rssfeed_url = new Array();
-			rssfeed_url[0] = "https://finance.yahoo.com/news/rssindex";
+			rssfeed_url[0] = "https://www.indiainfoline.com/rss/news.xml";
 			rssfeed_frame_width = "100%";
-			rssfeed_frame_height = "500";
+			rssfeed_frame_height = "500px";
 			rssfeed_scroll = "on";
-			rssfeed_scroll_step = "3";
+			rssfeed_scroll_step = "6";
 			rssfeed_scroll_bar = "off";
 			rssfeed_target = "_blank";
-			rssfeed_font_size = "16";
-			rssfeed_font_face = "Sans-serif";
+			rssfeed_font_size = "12";
+			rssfeed_font_face = "";
 			rssfeed_border = "on";
-			rssfeed_css_url = "";
+			rssfeed_css_url = "https://c92ffefa54a5.ngrok.io/static/news.css";
 			rssfeed_title = "off";
-			rssfeed_title_name = "Trending Now";
-			rssfeed_title_bgcolor = "#444444";
+			rssfeed_title_name = "";
+			rssfeed_title_bgcolor = "#3366ff";
 			rssfeed_title_color = "#fff";
 			rssfeed_title_bgimage = "";
 			rssfeed_footer = "off";
@@ -31,7 +33,7 @@
 			rssfeed_footer_color = "#333";
 			rssfeed_footer_bgimage = "";
 			rssfeed_item_title_length = "50";
-			rssfeed_item_title_color = "#222";
+			rssfeed_item_title_color = "#666";
 			rssfeed_item_bgcolor = "#fff";
 			rssfeed_item_bgimage = "";
 			rssfeed_item_border_bottom = "on";
@@ -39,16 +41,19 @@
 			rssfeed_item_date = "off";
 			rssfeed_item_description = "on";
 			rssfeed_item_description_length = "3000";
-			rssfeed_item_description_color = "#000";
+			rssfeed_item_description_color = "#666";
 			rssfeed_item_description_link_color = "#333";
 			rssfeed_item_description_tag = "off";
 			rssfeed_no_items = "0";
-			rssfeed_cache = "6659355a1f185a48ecc3ea3134634653";
+			rssfeed_cache = "de201ee2e3c4faf95eefcb55ba1c9a24";
+			//-->
 		</script>
 		<script
 			type="text/javascript"
 			src="//feed.surfing-waves.com/js/rss-feed.js"
 		></script>
+
+		<!-- end sw-rss-feed code -->
 	</div>
 </div>
 {% endblock %}
