--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Growmore - {% block title %}{% endblock %}</title>
+		<link rel="icon" type="image/png" href="../static/img/stockicon-01.png" />
 
 		<link
 			rel="stylesheet"
@@ -14,18 +15,31 @@
 
 		<!-- CUSTOM CSS -->
 		<link rel="stylesheet" href="../static/style.css" />
+		<!-- <link rel="icon" href="../img/favicon.ico" type="image/icon type" /> -->
 	</head>
 	<body class="bg-dark">
 		<!-- NAVBAR -->
 
 		<nav
-			class="navbar navbar-expand-lg navbar-dark"
+			class="navbar navbar-expand-lg navbar-dark d-sm-flex flex-row"
 			style="background-color: #222"
-			;
 		>
-			<a class="navbar-brand" href="#">Growmore Analytica</a>
+			<div class="navbar-brand inline-block" href="#">
+				<img
+					src="../static/img/stockicon-01.png"
+					height="30px"
+					width="30px"
+					class="img-responsive"
+				/>
+				<h5
+					class="navbar-text font-weight-bold text-white"
+					id="header-logo-img"
+				>
+					Growmore Analytica
+				</h5>
+			</div>
 			<button
-				class="navbar-toggler"
+				class="navbar-toggler inline-block"
 				type="button"
 				data-toggle="collapse"
 				data-target="#navbarNav"
@@ -35,11 +49,8 @@
 			>
 				<span class="navbar-toggler-icon"></span>
 			</button>
-			<div
-				class="collapse navbar-collapse d-flex flex-row-reverse bd-highlight"
-				id="navbarNav"
-			>
-				<ul class="navbar-nav">
+			<div class="collapse navbar-collapse" id="navbarNav">
+				<ul class="navbar-nav ml-auto mt-2 mt-lg-0">
 					<li class="nav-item">
 						<a class="nav-link" href="/">Home</a>
 					</li>
@@ -65,7 +76,20 @@
 		<!--FOOTER-->
 
 		<!--FOOTER END-->
-
+		<!--CHATBOT-->
+		<script
+			type="text/javascript"
+			id="botcopy-embedder-d7lcfheammjct"
+			class="botcopy-embedder-d7lcfheammjct"
+			data-botId="5faf6c2098ca210008f7174b"
+		>
+			var s = document.createElement("script");
+			s.type = "text/javascript";
+			s.async = true;
+			s.src = "https://widget.botcopy.com/js/injection.js";
+			document.getElementById("botcopy-embedder-d7lcfheammjct").appendChild(s);
+		</script>
+		<!--CHATBOT END-->
 		<script
 			src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
 			integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
@@ -74,6 +98,10 @@
 		<script
 			src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
 			integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+			crossorigin="anonymous"
+		></script>
+		<script
+			src="https://kit.fontawesome.com/524adbb4d6.js"
 			crossorigin="anonymous"
 		></script>
 	</body>
