--- a/templates/base.html
+++ b/templates/base.html
@@ -17,12 +17,12 @@
 		<link rel="stylesheet" href="../static/style.css" />
 		<!-- <link rel="icon" href="../img/favicon.ico" type="image/icon type" /> -->
 	</head>
-	<body class="bg-dark">
+	<body style="background-color: #212121">
 		<!-- NAVBAR -->
 
 		<nav
 			class="navbar navbar-expand-lg navbar-dark d-sm-flex flex-row"
-			style="background-color: #222"
+			style="background-color: #181818"
 		>
 			<div class="navbar-brand inline-block" href="#">
 				<img
@@ -60,7 +60,7 @@
 						>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">About</a>
+						<a class="nav-link" href="/about">About</a>
 					</li>
 					<!-- <li class="nav-item">
 							<a class="nav-link" href="#">Pricing</a>
