--- a/static/style.css
+++ b/static/style.css
@@ -1,7 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap");
-
-body {
-	font-family: "Roboto", sans-serif;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+#base-body {
+	font-family: 'Montserrat', sans-serif ;
+	color: blueviolet;
+	
 }
 
 #header-logo-img :hover {
