--- a/templates/base.html
+++ b/templates/base.html
@@ -5,19 +5,22 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Growmore - {% block title %}{% endblock %}</title>
 		<link rel="icon" type="image/png" href="../static/img/stockicon-01.png" />
-
+		<!-- <link rel="stylesheet" href="../static/custom.css" /> -->
+	
 		<link
 			rel="stylesheet"
 			href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
 			integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
 			crossorigin="anonymous"
 		/>
+		<link rel="stylesheet" href="../static/custom.css" />
+
 
 		<!-- CUSTOM CSS -->
-		<link rel="stylesheet" href="../static/style.css" />
-		<!-- <link rel="icon" href="../img/favicon.ico" type="image/icon type" /> -->
+
 	</head>
-	<body style="background-color: #212121">
+
+	<body style="background-color: #212121" id = "base-body">
 		<!-- NAVBAR -->
 
 		<nav
@@ -50,21 +53,19 @@
 				<span class="navbar-toggler-icon"></span>
 			</button>
 			<div class="collapse navbar-collapse" id="navbarNav">
-				<ul class="navbar-nav ml-auto mt-2 mt-lg-0">
-					<li class="nav-item">
-						<a class="nav-link" href="/">Home</a>
-					</li>
+				<ul class="navbar-nav ml-auto mt-2 mt-lg-0" role="tablist">
 					<li class="nav-item active">
-						<a class="nav-link" href="/news"
-							>News <span class="sr-only">(current)</span></a
-						>
+						<a class="nav-link" href="/" role="tab">Home
+							<span class="sr-only">(current)</span>
+						</a>
+					</li>
+					<li class="nav-item ">
+						<a class="nav-link" href="/news" role="tab">News </a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="/about">About</a>
+						<a class="nav-link" href="/about" role="tab">About</a>
 					</li>
-					<!-- <li class="nav-item">
-							<a class="nav-link" href="#">Pricing</a>
-						</li> -->
+					
 				</ul>
 			</div>
 		</nav>
@@ -76,6 +77,11 @@
 		<!--FOOTER-->
 
 		<!--FOOTER END-->
+		<!--NAVBAR ACTIVE-->
+		<scripts>
+			
+		</scripts>
+		<!--NAVBAR ACCTIVE END-->
 		<!--CHATBOT-->
 		<script
 			type="text/javascript"
