--- a/templates/base.html
+++ b/templates/base.html
@@ -54,10 +54,8 @@
 					<li class="nav-item">
 						<a class="nav-link" href="/">Home</a>
 					</li>
-					<li class="nav-item active">
-						<a class="nav-link" href="/news"
-							>News <span class="sr-only">(current)</span></a
-						>
+					<li class="nav-item">
+						<a class="nav-link" href="/news">News <span class="sr-only">(current)</span></a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="/about">About</a>
