Made minor changes

--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,10 @@
 		<!-- CUSTOM CSS -->
 		<link rel="stylesheet" href="../static/style.css" />
 		<!-- <link rel="icon" href="../img/favicon.ico" type="image/icon type" /> -->
+		<link
+			rel="stylesheet"
+			href="https://cdn.jsdelivr.net/chartist.js/latest/chartist.min.css"
+		/>
 	</head>
 	<body class="bg-dark">
 		<!-- NAVBAR -->
