--- a/templates/base.html
+++ b/templates/base.html
@@ -59,7 +59,12 @@
 						<a class="nav-link" href="/">Home</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="/news">News <span class="sr-only">(current)</span></a>
+						<a class="nav-link" href="/news"
+							>News <span class="sr-only">(current)</span></a
+						>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="/sentiment">Sentiment</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="/about">About</a>
