Added ngrok server file

--- a/templates/news.html
+++ b/templates/news.html
@@ -20,7 +20,7 @@
 			rssfeed_font_size = "12";
 			rssfeed_font_face = "";
 			rssfeed_border = "on";
-			rssfeed_css_url = "https://c92ffefa54a5.ngrok.io/static/news.css";
+			rssfeed_css_url = "https://efb8365d5ce2.ngrok.io/news.css";
 			rssfeed_title = "off";
 			rssfeed_title_name = "";
 			rssfeed_title_bgcolor = "#3366ff";
