Added sentiment changes

--- a/templates/news.html
+++ b/templates/news.html
@@ -1,10 +1,9 @@
 {% extends "base.html"%} {% block title%}News{% endblock%} {% block content %}
 <div class="container-fluid mt-3">
 	<div class="jumbotron mx-4">
-		<h1 class="display-4">Stock, www!</h1>
+		<h1 class="display-4">News Updates</h1>
 		<p class="lead">
-			This is a simple hero unit, a simple jumbotron-style component for calling
-			extra attention to featured content or information.
+			Be the first to witness the flashing news about the stock markets!
 		</p>
 		<hr class="my-4" />
 		<!-- start sw-rss-feed code -->
@@ -20,7 +19,7 @@
 			rssfeed_font_size = "12";
 			rssfeed_font_face = "";
 			rssfeed_border = "on";
-			rssfeed_css_url = "https://c92ffefa54a5.ngrok.io/static/news.css";
+			rssfeed_css_url = "https://efb8365d5ce2.ngrok.io/news.css";
 			rssfeed_title = "off";
 			rssfeed_title_name = "";
 			rssfeed_title_bgcolor = "#3366ff";
