Completed sentiment-analysis

--- a/templates/sentiment.html
+++ b/templates/sentiment.html
@@ -4,7 +4,8 @@
 	<div class="jumbotron shadow mx-4 bg-dark text-white">
 		<h1 class="display-4">Sentiment Analysis</h1>
 		<p class="lead">
-			Enter the company name for which you want to know the Sentiment Analysis.
+			Enter the company stock symbol for which you want to know the Sentiment
+			Analysis.
 		</p>
 		<hr />
 		<br />
@@ -12,13 +13,14 @@
 			<div class="row align-items-end">
 				<div class="col-5">
 					<div class="form-group">
-						<label>Company Name</label>
+						<label>Company Stock Symbol</label>
 						<input
 							type="text"
 							name="company-name"
 							class="form-control"
 							id="company-name-input"
 							aria-describedby="emailHelp"
+							placeholder="eg. AAPL"
 						/>
 					</div>
 				</div>
@@ -44,6 +46,8 @@
 				</div>
 			</div>
 		</form>
+
+		{% block sentiment_result %} {% endblock %}
 	</div>
 </div>
 {% endblock %}
