--- a/templates/sentiment_result.html
+++ b/templates/sentiment_result.html
@@ -6,7 +6,12 @@
 <p class="lead">
 	Mean sentiment of
 	<span class="font-weight-bold">{{value['news'][0][0]}}</span> is
-	<span class="font-weight-bold">{{value['mean_sentiment']}}</span>.
+	<span class="font-weight-bold">{{value['mean_sentiment']}}</span>
+	{% if value['mean_sentiment'] >= 0 %}
+	<i class="fas fa-arrow-up text-success"></i>
+	{% else %}
+	<i class="fas fa-arrow-down text-danger"></i>
+	{% endif %} .
 </p>
 <br />
 <table class="table table-striped table-dark">
@@ -26,7 +31,15 @@
 			<td>{{value['news'][i][1]}}</td>
 			<td>{{value['news'][i][2]}}</td>
 			<td>{{value['news'][i][3]}}</td>
-			<td>{{value['news'][i][7]}}</td>
+			<td>
+				{{value['news'][i][7]}} {% if value['news'][i][7] > 0 %}
+				<i class="fas fa-arrow-up text-success"></i>
+				{% elif value['news'][i][7] < 0 %}
+				<i class="fas fa-arrow-down text-danger"></i>
+				{% else %}
+				<!-- <i class="fas fa-equals text-warning"></i> -->
+				{% endif %}
+			</td>
 		</tr>
 		{% endfor %}
 	</tbody>
