--- a/templates/base.html
+++ b/templates/base.html
@@ -28,19 +28,21 @@
 			class="navbar navbar-expand-lg navbar-dark d-sm-flex flex-row"
 			style="background-color: #181818"
 		>
-			<div class="navbar-brand inline-block" href="#">
+			<div class="navbar-brand inline-block">
 				<img
 					src="../static/img/stockicon-01.png"
 					height="30px"
 					width="30px"
 					class="img-responsive"
 				/>
-				<h5
-					class="navbar-text font-weight-bold text-white"
-					id="header-logo-img"
-				>
-					Growmore Analytica
-				</h5>
+				<a id="growmore-logo-header" href="/">
+					<h5
+						class="navbar-text font-weight-bold text-white"
+						id="header-logo-img"
+					>
+						Growmore Analytica
+					</h5>
+				</a>
 			</div>
 			<button
 				class="navbar-toggler inline-block"
@@ -82,119 +84,6 @@
 
 		<!--FOOTER-->
 
-		<!-- Footer -->
-		<footer
-			class="page-footer text-white bg-dark font-small stylish-color-dark pt-4"
-		>
-			<!-- Footer Links -->
-			<div class="container text-center text-md-left">
-				<!-- Grid row -->
-				<div class="row">
-					<!-- Grid column -->
-					<div class="col-md-4 mx-auto">
-						<!-- Content -->
-						<h5 class="font-weight-bold text-uppercase mt-3 mb-4">
-							Growmore Analytica
-						</h5>
-						<p>A complete solution to help you trade better!</p>
-					</div>
-					<!-- Grid column -->
-
-					<hr class="clearfix w-100 d-md-none" />
-
-					<!-- Grid column -->
-
-					<!-- Grid column -->
-
-					<hr class="clearfix w-100 d-md-none" />
-
-					<!-- Grid column -->
-					<div class="col-md-2 mx-auto">
-						<!-- Links -->
-						<h5 class="font-weight-bold text-uppercase mt-3 mb-4">Our team</h5>
-
-						<ul class="list-unstyled">
-							<li>
-								<a
-									href="http://github.com/chinmxy"
-									target="_blank"
-									class="text-white"
-									><i class="fa fa-github" aria-hidden="true">
-										&nbspChinmay Gawde</i
-									></a
-								>
-							</li>
-							<li>
-								<a
-									href="http://github.com/Ethan0507"
-									target="_blank"
-									class="text-white"
-									><i class="fa fa-github" aria-hidden="true">
-										&nbspEthan Palani</i
-									></a
-								>
-							</li>
-							<li>
-								<a
-									href="http://github.com/jxswin"
-									target="_blank"
-									class="text-white"
-									><i class="fa fa-github" aria-hidden="true">
-										&nbspJeswin Thomas</i
-									></a
-								>
-							</li>
-						</ul>
-					</div>
-					<!-- Grid column -->
-				</div>
-				<!-- Grid row -->
-			</div>
-			<!-- Footer Links -->
-
-			<!-- Call to action -->
-			<!-- <ul class="list-unstyled list-inline text-center py-2">
-		<li class="list-inline-item">
-			<h5 class="mb-1">Register for free</h5>
-		</li>
-		<li class="list-inline-item">
-			<a href="#!" class="btn btn-danger btn-rounded">Sign up!</a>
-		</li>
-	</ul> -->
-			<!-- Call to action -->
-
-			<hr />
-
-			<!-- Social buttons -->
-			<ul class="list-unstyled list-inline text-center text-white">
-				<li class="list-inline-item">
-					<a class="btn-floating btn-fb mx-1">
-						<i class="fab fa-facebook text-white fa-2x"></i>
-					</a>
-				</li>
-				<li class="list-inline-item">
-					<a class="btn-floating btn-tw mx-1">
-						<i class="fab fa-twitter text-white fa-2x"></i>
-					</a>
-				</li>
-				<li class="list-inline-item">
-					<a class="btn-floating btn-li mx-1">
-						<i class="fab fa-linkedin fa-2x text-white"></i>
-					</a>
-				</li>
-			</ul>
-			<!-- Social buttons -->
-
-			<!-- Copyright -->
-			<div class="footer-copyright text-center py-3">
-				© 2020 Copyright:
-				<a href="/"> www.growmoreanalytica.com</a>
-			</div>
-			<!-- Copyright -->
-		</footer>
-		<!-- Footer -->
-
-		<!--FOOTER END-->
 		<!--CHATBOT-->
 		<script
 			type="text/javascript"
