--- a/templates/news.html
+++ b/templates/news.html
@@ -19,7 +19,8 @@
 			rssfeed_font_size = "12";
 			rssfeed_font_face = "";
 			rssfeed_border = "on";
-			rssfeed_css_url = "https://efb8365d5ce2.ngrok.io/news.css";
+			rssfeed_css_url =
+				"https://growmore-analytica-storage.s3.ap-south-1.amazonaws.com/news.css";
 			rssfeed_title = "off";
 			rssfeed_title_name = "";
 			rssfeed_title_bgcolor = "#3366ff";
