--- a/templates/base.html
+++ b/templates/base.html
@@ -58,18 +58,20 @@
 			<div class="collapse navbar-collapse" id="navbarNav">
 				<ul class="navbar-nav ml-auto mt-2 mt-lg-0">
 					<li class="nav-item">
-						<a class="nav-link" href="/">Home</a>
+						<a style="color: white" class="nav-link" href="/">Home</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="/news"
+						<a style="color: white" class="nav-link" href="/news"
 							>News <span class="sr-only">(current)</span></a
 						>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="/sentiment">Sentiment</a>
+						<a style="color: white" class="nav-link" href="/sentiment"
+							>Sentiment</a
+						>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="/about">About</a>
+						<a style="color: white" class="nav-link" href="/about">About</a>
 					</li>
 					<!-- <li class="nav-item">
 							<a class="nav-link" href="#">Pricing</a>
