--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
 						/>
 					</div>
 				</div>
-				<div class="col-3">
+				<!-- <div class="col-3">
 					<div class="form-group">
 						<label>Investment amount</label>
 						<div class="input-group mb-3">
@@ -39,16 +39,13 @@
 							/>
 						</div>
 					</div>
-				</div>
+				</div> -->
 				<div class="col-2 mb-3">
-					<button type="submit" class="btn btn-success">
-						Submit
-					</button>
+					<button type="submit" class="btn btn-success">Submit</button>
 				</div>
 			</div>
 		</form>
 		{% block result %} {% endblock %}
 	</div>
-
 </div>
 {% endblock%}
