Added comparison graphs

--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
 						/>
 					</div>
 				</div>
-				<!-- <div class="col-3">
+				<div class="col-3" style="display: none">
 					<div class="form-group">
 						<label>Investment amount</label>
 						<div class="input-group mb-3">
@@ -36,10 +36,11 @@
 								placeholder=""
 								aria-label="Username"
 								aria-describedby="basic-addon1"
+								value="5000"
 							/>
 						</div>
 					</div>
-				</div> -->
+				</div>
 				<div class="col-2 mb-3">
 					<button type="submit" class="btn btn-success">Submit</button>
 				</div>
