--- a/templates/news.html
+++ b/templates/news.html
@@ -19,8 +19,7 @@
 			rssfeed_font_size = "12";
 			rssfeed_font_face = "";
 			rssfeed_border = "on";
-			rssfeed_css_url =
-				"https://growmore-test.s3.ap-south-1.amazonaws.com/news.css";
+			rssfeed_css_url = "https://growmore.s3.ap-south-1.amazonaws.com/news.css";
 			rssfeed_title = "off";
 			rssfeed_title_name = "";
 			rssfeed_title_bgcolor = "#3366ff";
